--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ baseURL = "https://jddoesdev.github.io/docksal-training/"
 canonifyURLs = "true"
 
 [params]
+  disableInlineCopyToClipBoard = true
   showVisitedLinks = true
   description = "Docksal training guide"
 
